--- a/provisioning/group_vars/production/main.yml
+++ b/provisioning/group_vars/production/main.yml
@@ -1,3 +1,7 @@
 ---
 mitmproxy_secret: "{{ encrypted_mitmproxy_secret }}"
 morph_url: https://morph.io
+server_name: morph.io
+env_file: env.production.secure
+backups: true
+cron_jobs: true
