--- a/provisioning/group_vars/development/main.yml
+++ b/provisioning/group_vars/development/main.yml
@@ -5,3 +5,11 @@ server_name: dev.morph.io
 env_file: env.local.secure
 backups: false
 cron_jobs: false
+github_app_client_id: "{{ encrypted_github_app_client_id }}"
+github_app_client_secret: "{{ encrypted_github_app_client_secret }}"
+secret_key_base: "{{ encrypted_secret_key_base }}"
+sync_auth_token: "{{ encrypted_sync_auth_token }}"
+discourse_secret: "{{ encrypted_discourse_secret }}"
+cuttlefish_server: cuttlefish.oaf.org.au
+cuttlefish_username: "{{ encrypted_cuttlefish_username }}"
+cuttlefish_password: "{{ encrypted_cuttlefish_password }}"
