Extract variables from template

--- a/provisioning/group_vars/production/main.yml
+++ b/provisioning/group_vars/production/main.yml
@@ -5,3 +5,15 @@ server_name: morph.io
 env_file: env.production.secure
 backups: true
 cron_jobs: true
+github_app_client_id: "{{ encrypted_github_app_client_id }}"
+github_app_client_secret: "{{ encrypted_github_app_client_secret }}"
+secret_key_base: "{{ encrypted_secret_key_base }}"
+google_analytics_tracking_id: "{{ encrypted_google_analytics_tracking_id }}"
+heap_analytics_tracking_id: "{{ encrypted_heap_analytics_tracking_id }}"
+sync_auth_token: "{{ encrypted_sync_auth_token }}"
+discourse_secret: "{{ encrypted_discourse_secret }}"
+honeybadger_api_key: "{{ encrypted_honeybadger_api_key }}"
+cuttlefish_server: cuttlefish.oaf.org.au
+cuttlefish_username: "{{ encrypted_cuttlefish_username }}"
+cuttlefish_password: "{{ encrypted_cuttlefish_password }}"
+skylight_authentication: "{{ encrypted_skylight_authentication }}"
