Use one env file for all environments - much cleaner

--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -39,7 +39,7 @@
 - name: Ensure that /var/www/shared exists
   file: path=/var/www/shared owner=deploy group=deploy state=directory
 - name: Ensure that .env exists
-  template: src={{ env_file }} dest=/var/www/shared/.env owner=deploy group=deploy
+  template: src=env dest=/var/www/shared/.env owner=deploy group=deploy
   # TODO If this changes we should rerun foreman as well
 # TODO This is a nasty hack. Would be much nicer to do this in the capistrano
 # deploy. But security concerns (the need for passwordless sudo) make this hard.
