--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,12 @@
+web:
+  build: .
+  command: bundle exec rails s -p 3000 -b '0.0.0.0'
+  volumes:
+    - .:/morph
+  ports:
+    - "3000:3000"
+
+# TODO: Add data volume
 elasticsearch:
   image: elasticsearch:1.6.0
   ports:
