Add dependency for restructured text support. Fixes #827

--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -148,3 +148,8 @@
 - name: copy across monit config for sidekiq
   copy: src=monit_sidekiq.conf dest=/etc/monit/conf.d/sidekiq.conf
   notify: reload monit
+
+# Dependencies required by Github markup gem. See
+# https://github.com/github/markup#markups
+- name: Install dependency for restructured text support
+  pip: name=docutils state=present
