--- a/provisioning/group_vars/production/main.yml
+++ b/provisioning/group_vars/production/main.yml
@@ -16,3 +16,5 @@ cuttlefish_server: cuttlefish.oaf.org.au
 cuttlefish_username: "{{ encrypted_cuttlefish_username }}"
 cuttlefish_password: "{{ encrypted_cuttlefish_password }}"
 skylight_authentication: "{{ encrypted_skylight_authentication }}"
+stripe_publishable_key: "{{ encrypted_stripe_publishable_key }}"
+stripe_secret_key: "{{ encrypted_stripe_secret_key }}"
