--- a/provisioning/roles/ruby-2.0.0-p353/tasks/main.yml
+++ b/provisioning/roles/ruby-2.0.0-p353/tasks/main.yml
@@ -6,7 +6,7 @@
   shell: gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3
   sudo_user: deploy
 
-# TODO Maybe install rvm by installing the package ruby-rvm?
+# TODO: Maybe install rvm by installing the package ruby-rvm?
 - name: Ensure rvm installed in deploy user
   shell: curl -sSL https://get.rvm.io | bash -s stable creates=/home/deploy/.rvm
   sudo_user: deploy
