--- a/provisioning/roles/discourse/templates/app.yml
+++ b/provisioning/roles/discourse/templates/app.yml
@@ -1,40 +1,82 @@
-# this is the base templates used, you can cut it down to include less functionality per container
+##
+## After making changes to this file, you MUST rebuild for any changes
+## to take effect in your live Discourse instance:
+##
+## /var/discourse/launcher rebuild app
+##
+## Make sure to obey YAML syntax! You can use this site to help check:
+## http://www.yamllint.com/
+
+## this is the all-in-one, standalone Discourse Docker container template
+
+# You may add rate limiting by uncommenting the web.ratelimited template.
+# Out of the box it allows 12 reqs a second per ip, and 100 per minute per ip
+# This is configurable by amending the params in this file
+
 templates:
-  - "templates/cron.template.yml"
   - "templates/postgres.template.yml"
   - "templates/redis.template.yml"
-  - "templates/sshd.template.yml"
   - "templates/web.template.yml"
+  - "templates/sshd.template.yml"
+  - "templates/web.ratelimited.template.yml"
 
-# which ports to expose?
+## which TCP/IP ports should this container expose?
 expose:
   - "8000:80" # fwd host port 8000 to container port 80 (http)
   - "2222:22" # fwd host port 2222 to container port 22 (ssh)
 
 params:
-  # git revision to run
-  version: tests-passed
+  db_default_text_search_config: "pg_catalog.english"
+
+  ## Set db_shared_buffers to a max of 25% of the total memory.
+  ##
+  ## On 1GB installs set to 128MB (to leave room for other processes)
+  ## on a 4GB instance you may raise to 1GB
+  #db_shared_buffers: "256MB"
+  #
+  ## Set higher on large instances it defaults to 10MB, for a 3GB install 40MB is a good default
+  ## this improves sorting performance, but adds memory usage per-connection
+  #db_work_mem: "40MB"
+  #
+  ## Which Git revision should this container use? (default: tests-passed)
+  #version: tests-passed
 
 env:
-  # comma-separated emails
-  DISCOURSE_DEVELOPER_EMAILS: 'matthew@oaf.org.au'
-  # CHANGE ME to your hostname
-  DISCOURSE_HOSTNAME: '{{ discourse_server_name }}'
-  # SET ME to your smtp server eg mandrill
-  # don't forget to set mail
-  DISCOURSE_SMTP_ADDRESS: {{ ansible_default_ipv4['address'] }} # (mandatory)
-  # DISCOURSE_SMTP_PORT: 587                        # (optional)
-  # DISCOURSE_SMTP_USER_NAME: user@example.com      # (optional)
-  # DISCOURSE_SMTP_PASSWORD: p@ssword               # (optional)
+  LANG: en_US.UTF-8
+  # DISCOURSE_DEFAULT_LOCALE: en
 
-# These containers are stateless, all the data is stored in /shared
+  ## TODO: How many concurrent web requests are supported?
+  ## With 2GB we recommend 3-4 workers, with 1GB only 2
+  #UNICORN_WORKERS: 3
+
+  ## TODO: List of comma delimited emails that will be made admin and developer
+  ## on initial signup example 'user1@example.com,user2@example.com'
+  DISCOURSE_DEVELOPER_EMAILS: 'matthew@oaf.org.au'
+
+  ## TODO: The domain name this Discourse instance will respond to
+  DISCOURSE_HOSTNAME: '{{ discourse_server_name }}'
+
+  ## TODO: The mailserver this Discourse instance will use
+  DISCOURSE_SMTP_ADDRESS: {{ ansible_default_ipv4['address'] }}         # (mandatory)
+  #DISCOURSE_SMTP_PORT: 587                        # (optional)
+  #DISCOURSE_SMTP_USER_NAME: user@example.com      # (optional)
+  #DISCOURSE_SMTP_PASSWORD: pa$$word               # (optional)
+  #DISCOURSE_SMTP_ENABLE_START_TLS: true           # (optional, default true)
+
+  ## The CDN address for this Discourse instance (configured to pull)
+  #DISCOURSE_CDN_URL: //discourse-cdn.example.com
+
+## These containers are stateless, all data is stored in /shared
 volumes:
   - volume:
       host: /var/docker/shared/standalone
       guest: /shared
+  - volume:
+      host: /var/docker/shared/standalone/log/var-log
+      guest: /var/log
 
-# you may use the docker manager to upgrade and monitor your docker image
-# UI will be visible at http://yoursite.com/admin/docker
+## The docker manager plugin allows you to one-click upgrade Discourse
+## http://discourse.example.com/admin/docker
 hooks:
   after_code:
     - exec:
@@ -43,12 +85,15 @@ hooks:
           - mkdir -p plugins
           - git clone https://github.com/discourse/docker_manager.git
 
-# Remember, this is YAML syntax - you can only have one block with a name
+## Remember, this is YAML syntax - you can only have one block with a name
 run:
   - exec: echo "Beginning of custom commands"
 
+  ## If you want to set the 'From' email address for your first registration, uncomment and change:
+  #- exec: rails r "SiteSetting.notification_email='info@unconfigured.discourse.org'"
+  ## After getting the first signup email, re-comment the line. It only needs to run once.
+
   ## If you want to configure password login for root, uncomment and change:
-  #- exec: apt-get -y install whois # for mkpasswd
   ## Use only one of the following lines:
   #- exec: /usr/sbin/usermod -p 'PASSWORD_HASH' root
   #- exec: /usr/sbin/usermod -p "$(mkpasswd -m sha-256 'RAW_PASSWORD')" root
