--- a/provisioning/roles/discourse/templates/app.yml
+++ b/provisioning/roles/discourse/templates/app.yml
@@ -57,11 +57,11 @@ env:
   DISCOURSE_HOSTNAME: '{{ discourse_server_name }}'
 
   ## TODO: The mailserver this Discourse instance will use
-  DISCOURSE_SMTP_ADDRESS: {{ ansible_default_ipv4['address'] }}         # (mandatory)
-  #DISCOURSE_SMTP_PORT: 587                        # (optional)
-  #DISCOURSE_SMTP_USER_NAME: user@example.com      # (optional)
-  #DISCOURSE_SMTP_PASSWORD: pa$$word               # (optional)
-  #DISCOURSE_SMTP_ENABLE_START_TLS: true           # (optional, default true)
+  DISCOURSE_SMTP_ADDRESS: '{{ cuttlefish_server }}'
+  DISCOURSE_SMTP_PORT: 2525
+  DISCOURSE_SMTP_USER_NAME: '{{ cuttlefish_username }}'
+  DISCOURSE_SMTP_PASSWORD: '{{ cuttlefish_password }}'
+  DISCOURSE_SMTP_ENABLE_START_TLS: true
 
   ## The CDN address for this Discourse instance (configured to pull)
   #DISCOURSE_CDN_URL: //discourse-cdn.example.com
