Rotate the Rails logs daily & keep the last 7 days
This is so they don't get huge. A week seems like plenty of time, I've
never need to check back any further.

Fixes #944.

--- a/provisioning/roles/morph-app/meta/main.yml
+++ b/provisioning/roles/morph-app/meta/main.yml
@@ -11,3 +11,13 @@ dependencies:
   - { role: mitmproxy }
   - role: f500.elasticsearch
     elasticsearch_network_host: localhost
+  - role: nickhammond.logrotate
+    logrotate_scripts:
+      - name: rails
+        path: "/var/www/shared/log/*.log"
+        options:
+          - daily
+          - rotate 7
+          - compress
+          - missingok
+          - copytruncate
