randomise the Owner.supports(plan) scope so heroes are listed in random order. Note, this change uses an MySQL only option, but as Morph.io seems pretty closely bound with MySQL, that seemed fine.

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 /tmp/sessions
 /tmp/sockets
 
-# Ignore the PID tempfiles but not the folder that holds them.
+# Ignore the PID tempfiles but not PID folder that holds them.
 /tmp/pids/*.pid
 
 /.env
