--- a/provisioning/roles/morph-app/files/monit_sidekiq.conf
+++ b/provisioning/roles/morph-app/files/monit_sidekiq.conf
@@ -2,10 +2,10 @@
 # https://github.com/mperham/sidekiq/blob/master/examples/monitrc.conf
 # and @auxesis
 #
-
-check process sidekiq
-  with pidfile /var/www/shared/tmp/pids/morph-worker-1.pid
-  start program = "/sbin/start morph-worker-1"
-  stop  program = "/sbin/stop morph-worker-1"
-  if totalcpu is greater than 80% for 2 cycles then restart
-  if totalmemory is greater than 4000 MB for 2 cycles then restart
+# TODO: Commented out now we have multiple processes. Do we need to add this back?
+# check process sidekiq
+#   with pidfile /var/www/shared/tmp/pids/morph-worker-1.pid
+#   start program = "/sbin/start morph-worker-1"
+#   stop  program = "/sbin/stop morph-worker-1"
+#   if totalcpu is greater than 80% for 2 cycles then restart
+#   if totalmemory is greater than 4000 MB for 2 cycles then restart
