--- a/docker_images/morph-mitmdump/Dockerfile
+++ b/docker_images/morph-mitmdump/Dockerfile
@@ -13,6 +13,7 @@ RUN apt-get install -y \
   python-dev   \
   python-pip
 
+RUN pip install --upgrade cffi
 RUN pip install --upgrade cryptography
 RUN pip install mitmproxy==0.12
 RUN pip install --upgrade pyOpenSSL
