Always update the mitmdump docker image on provisioning

--- a/provisioning/roles/mitmproxy/tasks/main.yml
+++ b/provisioning/roles/mitmproxy/tasks/main.yml
@@ -12,6 +12,7 @@
     image: openaustralia/morph-mitmdump
     state: started
     restart_policy: always
+    pull: always
     # We attach the networking of this container to the host. This is necessary
     # because otherwise traffic would get redirected to the container, would
     # get proxied and a new request would come from this container which would
