Rename ansible ruby role to not have version number in it

--- a/provisioning/roles/morph-app/meta/main.yml
+++ b/provisioning/roles/morph-app/meta/main.yml
@@ -2,7 +2,7 @@
 dependencies:
   - { role: docker-server-linode }
   - { role: nginx-passenger }
-  - { role: ruby-2.0.0-p353 }
+  - { role: ruby }
   - { role: mysql }
   - { role: backups }
   - { role: redis }
