Other fixes required to get provisioning going now from a blank slate

--- a/provisioning/roles/mitmproxy/tasks/main.yml
+++ b/provisioning/roles/mitmproxy/tasks/main.yml
@@ -1,3 +1,6 @@
+- name: Make sure that pip is installed
+  apt: pkg=python-pip
+
 # Newer version of docker-py causes issues. See
 # https://github.com/ansible/ansible-modules-core/issues/1227
 - name: Install requirement for ansible docker
