--- a/provisioning/roles/discourse/tasks/main.yml
+++ b/provisioning/roles/discourse/tasks/main.yml
@@ -1,6 +1,9 @@
 ---
-- name: Ensure git is installed
-  apt: pkg=git
+# We need git 1.8 or higher here which is not available in the default package
+- name: Add git ppa repository
+  apt_repository: repo='ppa:git-core/ppa'
+- name: Ensure latest git is installed
+  apt: pkg=git state=latest
 - name: Ensure that /var/docker exists
   file: path=/var/docker owner=deploy group=deploy state=directory
 - name: Get the official discourse docker image
