--- a/provisioning/roles/ruby-2.0.0-p353/tasks/main.yml
+++ b/provisioning/roles/ruby-2.0.0-p353/tasks/main.yml
@@ -34,6 +34,7 @@
     - libreadline6-dev
     - zlib1g-dev
     - libssl-dev
+    - libgmp-dev
 - name: Ensure ruby-2.0.0-p353 is installed through rvm
   command: /bin/sh -l -c 'rvm install ruby-2.0.0-p353 --autolibs=read-fail' creates=/home/deploy/.rvm/rubies/ruby-2.0.0-p353
   sudo_user: deploy
