--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+# Using the trusty beta so we can use mysql 5.6
+dist: trusty
+sudo: required
+
 language: ruby
 rvm:
   - 2.3.1
@@ -6,3 +10,10 @@ env: SECRET_KEY_BASE=859384 RUN_SLOW_TESTS=true DONT_RUN_DOCKER_TESTS=true
 before_script:
   - cp config/database.travis.yml config/database.yml
   - bundle exec rake db:setup
+
+addons:
+  apt:
+    packages:
+    - mysql-server-5.6
+    - mysql-client-core-5.6
+    - mysql-client-5.6
