--- a/provisioning/roles/mysql/tasks/main.yml
+++ b/provisioning/roles/mysql/tasks/main.yml
@@ -1,10 +1,15 @@
 ---
-# TODO Fix apparmor thing
-- name: AppArmor seems to interfere with installation of mysql-server. Ugh.
-  apt: pkg=apparmor state=absent
+# We want to use mysql 5.6.4 (or later) so we have to install in a slightly
+# more long-winded way
 
-- name: Install mysql
-  apt: pkg=mysql-server
+- name: Ensure that we have the mysql repository key
+  apt_key: keyserver=pgp.mit.edu id=5072E1F5
+
+- name: Add the mysql repository
+  apt_repository: repo='deb http://repo.mysql.com/apt/ubuntu/ precise mysql-5.6'
+
+- name: Install latest mysql
+  apt: pkg=mysql-server state=latest
 
 - name: Install bits for compiling mysql clients against
   apt: pkg=libmysqlclient-dev
