--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -13,6 +13,7 @@
 - name: Ensure that ssl/faye directory exist
   file: path=/etc/nginx/ssl/faye owner=deploy group=deploy state=directory
 
+# TODO: Don't deploy certificates to 2 locations - we're using 1 certificate that covers all domains now
 - name: Add api.{{ server_name }} SSL certificate (public)
   copy: src=ssl/api.{{ server_name }}/ssl-unified.crt dest=/etc/nginx/ssl/www/cert.pem owner=deploy group=deploy mode=0600
   notify: restart nginx
