--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -219,3 +219,13 @@
 # https://github.com/github/markup#markups
 - name: Install dependency for restructured text support
   pip: name=docutils state=present
+
+# Vigorously clean unused docker data
+- name: Set up docker cleanup cron job
+  copy:
+    src: docker-system-prune
+    dest: /etc/cron.hourly/docker-system-prune
+    owner: root
+    group: root
+    mode: 0755
+  when: cron_jobs
