Put in a logrotate for morph run out of Upstart

--- a/provisioning/roles/morph-app/meta/main.yml
+++ b/provisioning/roles/morph-app/meta/main.yml
@@ -21,3 +21,11 @@ dependencies:
           - compress
           - missingok
           - copytruncate
+      - name: morph
+        path: "/var/log/morph/*.log"
+        options:
+          - daily
+          - rotate 7
+          - compress
+          - missingok
+          - copytruncate
