Set noeviction policy on redis
This turns redis into a persistent store so that we don't lose scraper
runs off the Sidekiq queue. When that happens the scraper run never
finishes which is not what we want.

Fixes #1056.

--- a/provisioning/roles/redis/files/redis.conf
+++ b/provisioning/roles/redis/files/redis.conf
@@ -419,6 +419,7 @@ slave-priority 100
 # The default is:
 #
 # maxmemory-policy volatile-lru
+maxmemory-policy noeviction
 
 # LRU and minimal TTL algorithms are not precise algorithms but approximated
 # algorithms (in order to save memory), so you can select as well the sample
