Enable Ansible workaround for #1107

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,6 @@
 [defaults]
 roles_path = provisioning/roles
 pipelining=True
+# FIXME: Turn off this insecure setting which is a workaround for: #1107 Local
+# Vagrant box has problems becoming unprivileged user when provisioning rvm with Ansible
+allow_world_readable_tmpfiles=True
