Upgrade all packages before starting an Ansible run
This ensures you're at a reasonably consistent state. It's also a good
idea to make sure all the machine's packages are up to date anyway.

This also fixes #1133.

--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -11,5 +11,11 @@
 #
 - hosts: all
   sudo: true
+  pre_tasks:
+    - name: Upgrade all packages first
+      apt:
+        update_cache: yes
+        cache_valid_time: 300
+        upgrade: yes
   roles:
     - morph-app
