Update Ansible role: ansible-galaxy install -f geerlingguy.java
Fixes #1130.

--- a/provisioning/roles/geerlingguy.java/tests/test.yml
+++ b/provisioning/roles/geerlingguy.java/tests/test.yml
@@ -1,5 +1,11 @@
 ---
-- hosts: localhost
-  remote_user: root
+- hosts: all
+
+  pre_tasks:
+    - name: Update apt cache.
+      apt: update_cache=yes cache_valid_time=600
+      when: ansible_os_family == 'Debian'
+      changed_when: false
+
   roles:
-    - ansible-role-java
+    - role_under_test
