--- a/provisioning/roles/geerlingguy.java/tasks/setup-Debian.yml
+++ b/provisioning/roles/geerlingguy.java/tasks/setup-Debian.yml
@@ -1,7 +1,4 @@
 ---
-- name: Update apt cache.
-  apt: update_cache=yes cache_valid_time=86400
-
 - name: Ensure Java is installed.
-  apt: "name={{ item }} state=installed"
-  with_items: java_packages
+  apt: "name={{ item }} state=present"
+  with_items: "{{ java_packages }}"
