Ensure directory exists before trying to copy a file to it

--- a/provisioning/roles/morph-app/tasks/main.yml
+++ b/provisioning/roles/morph-app/tasks/main.yml
@@ -31,6 +31,13 @@
     group: root
     mode: 0600
 
+- name: Ensure that /etc/sslmate exists
+  file:
+    path: /etc/sslmate
+    owner: root
+    group: root
+    state: directory
+
 - name: Copy SSLMate morph.io key
   copy:
     src: morph.io.key.secure
