Add sensible defaults to package.json

--- a/default_files/nodejs/template/package.json
+++ b/default_files/nodejs/template/package.json
@@ -1,7 +1,13 @@
 {
-	"dependencies": {
-		"cheerio": "latest",
-		"request": "latest",
-		"sqlite3": "latest"
-	}
+  "version": "0.0.1",
+  "main": "scraper.js",
+  "dependencies": {
+    "cheerio": "latest",
+    "request": "latest",
+    "sqlite3": "latest"
+  },
+  "keywords": [
+    "scraper",
+    "morph"
+  ]
 }
