Use Xenial Docker packages, for simplicity

--- a/provisioning/roles/morph-app/meta/main.yml
+++ b/provisioning/roles/morph-app/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 dependencies:
-  - { role: docker-server-linode }
+  - { role: docker }
   - { role: nginx-passenger }
   - { role: ruby }
   - { role: mysql }
