--- a/provisioning/roles/redis/tasks/main.yml
+++ b/provisioning/roles/redis/tasks/main.yml
@@ -42,30 +42,16 @@
   file: path=/var/log/redis.log owner=redis group=redis mode=0644 state=touch
 
 - name: copy upstart file
-  copy: src=upstart.conf dest=/etc/init/redis.conf
+  copy: src=redis-server.service dest=/lib/systemd/system/redis-server.service
 
 - name: copy redis.conf file
   copy: src=redis.conf dest=/etc/redis/redis.conf group=redis owner=redis
 
-# #- name: copy custom template
-# #  template: src=templates/redis.local.conf.j2 dest=/etc/redis/redis.local.conf group=redis owner=redis
-
-# #- name: copy redis-local script
-# #  template: src=templates/redis-local.j2 dest=/usr/local/bin/redis-local mode=0755
-
-# - name: installing redis binaries
-#   command: cp /tmp/redis-stable/src/{{ item }} /usr/local/bin
-#   with_items:
-#     - redis-server
-#     - redis-cli
-#     - redis-check-aof
-#     - redis-check-dump
-
-- name: cleaning up build files
+- name: clean up build files
   command: rm -rf /tmp/{{ item }}
   with_items:
     - redis-stable
     - redis-stable.tar.gz
 
 - name: ensure redis service is restarted
-  service: name=redis state=restarted
+  service: name=redis state=restarted enabled=yes
