--- a/provisioning/roles/redis/tasks/main.yml
+++ b/provisioning/roles/redis/tasks/main.yml
@@ -48,11 +48,11 @@
 - name: copy redis.conf file
   copy: src=redis.conf dest=/etc/redis/redis.conf group=redis owner=redis
 
+- name: ensure redis service is restarted
+  service: name=redis-server state=restarted enabled=yes
+
 - name: clean up build files
   command: rm -rf /tmp/{{ item }}
   with_items:
     - redis-stable
     - redis-stable.tar.gz
-
-- name: ensure redis service is restarted
-  service: name=redis state=restarted enabled=yes
