--- a/provisioning/roles/redis/tasks/main.yml
+++ b/provisioning/roles/redis/tasks/main.yml
@@ -22,9 +22,13 @@
 
 - name: ensure redis is clean before we build it
   command: make -C /tmp/redis-stable distclean
+  args:
+    creates: /tmp/redis-stable/redis-server
 
 - name: build redis and install
   command: make -C /tmp/redis-stable install
+  args:
+    creates: /usr/local/bin/redis-server
 
 - name: create redis group
   group: name=redis state=present system=yes
