--- a/provisioning/roles/ruby/tasks/main.yml
+++ b/provisioning/roles/ruby/tasks/main.yml
@@ -4,12 +4,13 @@
 
 - name: Install gpg key for rvm
   shell: gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3
-  sudo_user: deploy
+  become_user: deploy
 
 # TODO: Maybe install rvm by installing the package ruby-rvm?
 - name: Ensure rvm installed in deploy user
   shell: curl -sSL https://get.rvm.io | bash -s stable creates=/home/deploy/.rvm
-  sudo_user: deploy
+  become_user: deploy
+
 # TODO: Is it possible to extract this list of dependencies automatically from rvm?
 # Or allow rvm to do the install - but that would require the deploy user to have the permissions
 - name: "Ensure ruby-2.3.1 dependencies installed"
@@ -37,9 +38,9 @@
     - libgmp-dev
 - name: Ensure ruby-2.3.1 is installed through rvm
   command: /bin/sh -l -c 'rvm install ruby-2.3.1 --autolibs=read-fail' creates=/home/deploy/.rvm/rubies/ruby-2.3.1
-  sudo_user: deploy
+  become_user: deploy
   notify: Make ruby-2.3.1 the default
 
 - name: Install bundler
   command: bash -lc "rvm ruby-2.3.1; gem install bundler"
-  sudo_user: deploy
+  become_user: deploy
