--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -1,6 +1,6 @@
 ---
 # This playbook is for provisioning on a Linode box. It should be at least a Linode 2048 box and have
-# 64 bit Ubuntu 12.04 LTS with 256 MB swap (I think).
+# 64 bit Ubuntu 16.04 LTS with 256 MB swap (I think).
 #
 # To run in development:
 # vagrant provision local
@@ -9,6 +9,17 @@
 # cd provisioning
 # ansible-playbook --user=root -i hosts playbook.yml
 #
+
+# Ubuntu 16.04 LTS doesn't come with python pre-installed. We need that for
+# Ansible to work (for the gather facts). So install python first
+- hosts: all
+  become: true
+  gather_facts: False
+
+  tasks:
+  - name: install python 2
+    raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
+
 - hosts: all
   become: true
   pre_tasks:
