Update nginx-passenger for xenial

--- a/provisioning/roles/nginx-passenger/tasks/main.yml
+++ b/provisioning/roles/nginx-passenger/tasks/main.yml
@@ -9,16 +9,10 @@
   apt: pkg=ca-certificates
 
 - name: Ensure we have the passenger repository
-  apt_repository: repo='deb https://oss-binaries.phusionpassenger.com/apt/passenger precise main'
+  apt_repository: repo='deb https://oss-binaries.phusionpassenger.com/apt/passenger xenial main'
 
 - name: Install passenger
   apt: pkg=passenger
-
-- name: Add ngninx apt key
-  apt_key: url=http://nginx.org/keys/nginx_signing.key state=present
-
-- name: Add nginx binary repo
-  apt_repository: repo='deb http://nginx.org/packages/mainline/ubuntu/ precise nginx'
 
 - name: Install ngninx extras (compiled with Passenger stuff)
   apt: pkg=nginx-extras
