--- a/provisioning/group_vars/development/main.yml
+++ b/provisioning/group_vars/development/main.yml
@@ -14,3 +14,4 @@ cuttlefish_username: "{{ encrypted_cuttlefish_username }}"
 cuttlefish_password: "{{ encrypted_cuttlefish_password }}"
 stripe_publishable_key: "{{ encrypted_stripe_publishable_key }}"
 stripe_secret_key: "{{ encrypted_stripe_secret_key }}"
+discourse_server_name: help.{{ server_name }}
