--- a/provisioning/group_vars/production/main.yml
+++ b/provisioning/group_vars/production/main.yml
@@ -18,3 +18,4 @@ cuttlefish_password: "{{ encrypted_cuttlefish_password }}"
 skylight_authentication: "{{ encrypted_skylight_authentication }}"
 stripe_publishable_key: "{{ encrypted_stripe_publishable_key }}"
 stripe_secret_key: "{{ encrypted_stripe_secret_key }}"
+discourse_server_name: help.{{ server_name }}
