We now need to access database via a mysql user with password. Much better

--- a/provisioning/group_vars/development/main.yml
+++ b/provisioning/group_vars/development/main.yml
@@ -15,3 +15,4 @@ cuttlefish_password: "{{ encrypted_cuttlefish_password }}"
 stripe_publishable_key: "{{ encrypted_stripe_publishable_key }}"
 stripe_secret_key: "{{ encrypted_stripe_secret_key }}"
 discourse_server_name: help.{{ server_name }}
+mysql_password: "{{ encrypted_mysql_password }}"
