--- a/provisioning/roles/morph-app/templates/database.yml
+++ b/provisioning/roles/morph-app/templates/database.yml
@@ -1,5 +1,7 @@
 production:
   adapter: mysql2
   database: morph
+  username: morph
+  password: {{ mysql_password }}
   # This is required for sidekiq
   pool: 25
