Put discourse in /var/discourse rather than /var/docker to follow latest installation instructions

--- a/provisioning/roles/discourse/handlers/main.yml
+++ b/provisioning/roles/discourse/handlers/main.yml
@@ -1,5 +1,6 @@
 ---
 - name: restart nginx
   service: name=nginx state=restarted
+
 - name: start discourse
-  command: ./launcher start app chdir=/var/docker
+  command: ./launcher start app chdir=/var/discourse
