--- a/provisioning/roles/f500.elasticsearch/tasks/main.yml
+++ b/provisioning/roles/f500.elasticsearch/tasks/main.yml
@@ -20,6 +20,9 @@
   notify:
     - restart elasticsearch
 
+- name: Copy across another configuration
+  copy: src=default dest=/etc/default/elasticsearch backup=yes
+
 - name: Ensure Elasticsearch is configured to start on boot
   service:
     name: elasticsearch
