--- a/provisioning/group_vars/production/main.yml
+++ b/provisioning/group_vars/production/main.yml
@@ -2,8 +2,9 @@
 mitmproxy_secret: "{{ encrypted_mitmproxy_secret }}"
 morph_url: https://morph.io
 server_name: morph.io
-backups: true
-cron_jobs: true
+# TODO: Reenable these
+backups: false
+cron_jobs: false
 github_app_client_id: "{{ encrypted_github_app_client_id }}"
 github_app_client_secret: "{{ encrypted_github_app_client_secret }}"
 secret_key_base: "{{ encrypted_secret_key_base }}"
